sheep-dog-dev-svc-maven-plugin/docker/overlays/failsafe/service-patch-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: sheep-dog-dev-svc
spec:
  ports:
    - name: sheep-dog-dev-svc
      port: 8080
      nodePort: 30080
