sheep-dog-dev-svc-maven-plugin/docker/overlays/failsafe/service-patch.yaml
apiVersion: v1
kind: Service
metadata:
  name: sheep-dog-dev-svc
spec:
  ports:
    - name: sheep-dog-dev-svc
      port: 8080
      nodePort: 30080
---
apiVersion: v1
kind: Service
metadata:
  name: sheep-dog-dev-db
spec:
  ports:
    - name: sheep-dog-dev-db
      port: 3306
      nodePort: 30306
